ItEr30S17ValidacionEProbasFuncionais: Fixed graphical problems with new dependences calculations and z-indexing

--- a/navalplanner-webapp/src/main/webapp/planner/css/ganttzk.css
+++ b/navalplanner-webapp/src/main/webapp/planner/css/ganttzk.css
@@ -144,7 +144,7 @@ min-width:200px;
     position: absolute;
     padding: 4px;
     cursor: crosshair;
-    z-index:-1;
+    z-index:0;
 }
 
 .end,.start {
